[metadata]
name = python-odpt-train-info
version = attr: odpttraininfo.__version__
url = https://github.com/friuli-jokyo/python-odpt-train-info
description = ODPT形式で提供される鉄道運行情報を集約
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ふりうり

[options]
python_requires = >=3.10
packages = find: